objects/ssot__DeliveryVerificationEngmtSummary__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdExchangeId__c</fullName>
        <label>Ad Exchange Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdId__c</fullName>
        <label>Ad Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdKeywordId__c</fullName>
        <label>Ad Keyword Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdStrategyId__c</fullName>
        <label>Ad Strategy Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeliveryVerifnEngmtSummaryDateTime__c</fullName>
        <label>Delivery Verifn Engmt Summary Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceTypeConfigurationId__c</fullName>
        <label>Device Type Configuration Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EligibleImpressionsCount__c</fullName>
        <label>Eligible Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Delivery Verification Engmt Summary Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndustryStd1CustmMetricMeasurablImprCnt__c</fullName>
        <label>Idst Std1 Custm Mtrc Measurabl Impr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__IndustryStd1CustmMetricViewablImprCount__c</fullName>
        <label>Idst Std1 Custm Mtrc Viewabl Impr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__IndustryStd1EligibleImpressionsCount__c</fullName>
        <label>Idst Std1 Eligible Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__IndustryStd1ImprAudiblVisiblAtComplnCnt__c</fullName>
        <label>Idst Std1 Impr Audibl Visibl At Cpltn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__IndustryStd1ImprDistriNotMeasurableCount__c</fullName>
        <label>Idst Std1 Impr Dstr Not Measurable</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__IndustryStd1ImprDistriNotViewableCount__c</fullName>
        <label>Idst Std1 Impr Distribution Not Viewabl</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__IndustryStd1ImprDistributionViewablCount__c</fullName>
        <label>Idst Std1 Impr Distribution Viewable</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__IndustryStd1ImprVisiblFor10SecondsCount__c</fullName>
        <label>Idst Std1 Impr Visible For 10 Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__IndustryStd1MeasurableImpressionsCount__c</fullName>
        <label>Idst Std1 Measurable Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__IndustryStd1NotMeasurablImpressionsCount__c</fullName>
        <label>Idst Std1 Not Measurable Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__IndustryStd1NotViewableImpressionsCount__c</fullName>
        <label>Idst Std1 Not Viewable Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__IndustryStd1UOMId__c</fullName>
        <label>Industry Standard 1 Unit Of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndustryStd1ViewableImpressionsCount__c</fullName>
        <label>Idst Std1 Viewable Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__IndustryStd2MeasurableImprCount__c</fullName>
        <label>Idst Std2 Measurable Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__IndustryStd2TrvMeasurableImprCount__c</fullName>
        <label>Idst Std2 Trv Measurable Impr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__IndustryStd2TrvViewableImprCount__c</fullName>
        <label>Idst Std2 Trv Viewable Impr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__IndustryStd2UOMId__c</fullName>
        <label>Industry Standard 2 Unit Of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndustryStd2ViewableImpressionsCount__c</fullName>
        <label>Idst Std2 Viewable Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MarketingChannelTargetedSegmentId__c</fullName>
        <label>Marketing Channel Targeted Segment Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MediaBuyId__c</fullName>
        <label>Media Buy Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VerifMeasurablImprFrVideoPlyrLocnCount__c</fullName>
        <label>Verificatn Meas Impr For Video Plyr Locn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__VerifMeasurablImprFrVideoPlyrSizeCount__c</fullName>
        <label>Verificatn Meas Impr For Video Plyr Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__VerifMeasurableImpressnsForAudioCount__c</fullName>
        <label>Verification Measurable Impr For Audio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__VerificationBlockedImpressionsCount__c</fullName>
        <label>Verification Blocked Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__VerificationClassifiedImpressionsCount__c</fullName>
        <label>Verification Classified Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__VerificationPublisherProblemsCount__c</fullName>
        <label>Verification Publisher Problems</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__VerificationReportingProblemsCount__c</fullName>
        <label>Verification Reporting Problems</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__VerificationServingProblemsCount__c</fullName>
        <label>Verification Serving Problems</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__VerificationVerifiableImpressionsCount__c</fullName>
        <label>Verification Verifiable Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__VerificationVideoMutedAtStartCount__c</fullName>
        <label>Verification Video Muted At Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__VerificationVideoPlayerHDSizeImprCount__c</fullName>
        <label>Verification Video Player HD Size Impr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__VerificationVideoPlayrLargeSizeImprCount__c</fullName>
        <label>Verification Video Playr Large Size Impr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__VerificationVideoPlayrSmallSizeImprCount__c</fullName>
        <label>Verification Video Playr Small Size Impr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__VerificationVideoProminenceScoreNumber__c</fullName>
        <label>Verification Video Prominence Score</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ViewableImpressionsCount__c</fullName>
        <label>Viewable Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>